agregando el footer

--- a/BlogPost.html
+++ b/BlogPost.html
@@ -28,6 +28,9 @@
             </p>
             <p>Parrafo adicional</p>
         </div>
+        <div class="footer">
+            &copy; Freddy Patarroyo Git y GitHub
+        </div>
     </div>
 </body>
 
