--- a/BlogPost.html
+++ b/BlogPost.html
@@ -27,7 +27,7 @@
             </p>
             <p>Lorem ipsum es el texto que se usa habitualmente en diseño gráfico o de moda en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.
             </p>
-            <p>Párrafo adicional</p>
+            <p>P&aacute;rrafo adicional</p>
         </div>
         <div class="footer">
             &copy; Freddy Patarroyo Git y GitHub
