Cambiando el titulo del blog

--- a/BlogPost.html
+++ b/BlogPost.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="cabecera">
             <h1>
-                <img src="./imagenes/dragon.png" class="logo">Blog Git y GitHub <br/>
+                <img src="./imagenes/dragon.png" class="logo">Blog Sobre Git y GitHub <br/>
                 <span>Este en un blog para aprender de Git y Github</span>
             </h1>
         </div>
